--- a/The_Data_Analysis_Process/assessing-solutions.ipynb
+++ b/The_Data_Analysis_Process/assessing-solutions.ipynb
@@ -17,17 +17,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -454,17 +454,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -765,17 +765,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -990,17 +990,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1649,17 +1649,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1851,17 +1851,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1998,12 +1998,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>diagnosis</th>\n",
+       "      <th>radius_mean</th>\n",
+       "      <th>texture_mean</th>\n",
+       "      <th>perimeter_mean</th>\n",
+       "      <th>area_mean</th>\n",
+       "      <th>smoothness_mean</th>\n",
+       "      <th>compactness_mean</th>\n",
+       "      <th>concavity_mean</th>\n",
+       "      <th>concave_points_mean</th>\n",
+       "      <th>symmetry_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>842302</td>\n",
+       "      <td>M</td>\n",
+       "      <td>17.99</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>122.80</td>\n",
+       "      <td>1001.0</td>\n",
+       "      <td>0.11840</td>\n",
+       "      <td>0.27760</td>\n",
+       "      <td>0.3001</td>\n",
+       "      <td>0.14710</td>\n",
+       "      <td>0.2419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>842517</td>\n",
+       "      <td>M</td>\n",
+       "      <td>20.57</td>\n",
+       "      <td>17.77</td>\n",
+       "      <td>132.90</td>\n",
+       "      <td>1326.0</td>\n",
+       "      <td>0.08474</td>\n",
+       "      <td>0.07864</td>\n",
+       "      <td>0.0869</td>\n",
+       "      <td>0.07017</td>\n",
+       "      <td>0.1812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>84300903</td>\n",
+       "      <td>M</td>\n",
+       "      <td>19.69</td>\n",
+       "      <td>21.25</td>\n",
+       "      <td>130.00</td>\n",
+       "      <td>1203.0</td>\n",
+       "      <td>0.10960</td>\n",
+       "      <td>0.15990</td>\n",
+       "      <td>0.1974</td>\n",
+       "      <td>0.12790</td>\n",
+       "      <td>0.2069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>84348301</td>\n",
+       "      <td>M</td>\n",
+       "      <td>11.42</td>\n",
+       "      <td>20.38</td>\n",
+       "      <td>77.58</td>\n",
+       "      <td>386.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.28390</td>\n",
+       "      <td>0.2414</td>\n",
+       "      <td>0.10520</td>\n",
+       "      <td>0.2597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>84358402</td>\n",
+       "      <td>M</td>\n",
+       "      <td>20.29</td>\n",
+       "      <td>14.34</td>\n",
+       "      <td>135.10</td>\n",
+       "      <td>1297.0</td>\n",
+       "      <td>0.10030</td>\n",
+       "      <td>0.13280</td>\n",
+       "      <td>0.1980</td>\n",
+       "      <td>0.10430</td>\n",
+       "      <td>0.1809</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id diagnosis  radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
+       "0    842302         M        17.99           NaN          122.80     1001.0   \n",
+       "1    842517         M        20.57         17.77          132.90     1326.0   \n",
+       "2  84300903         M        19.69         21.25          130.00     1203.0   \n",
+       "3  84348301         M        11.42         20.38           77.58      386.1   \n",
+       "4  84358402         M        20.29         14.34          135.10     1297.0   \n",
+       "\n",
+       "   smoothness_mean  compactness_mean  concavity_mean  concave_points_mean  \\\n",
+       "0          0.11840           0.27760          0.3001              0.14710   \n",
+       "1          0.08474           0.07864          0.0869              0.07017   \n",
+       "2          0.10960           0.15990          0.1974              0.12790   \n",
+       "3              NaN           0.28390          0.2414              0.10520   \n",
+       "4          0.10030           0.13280          0.1980              0.10430   \n",
+       "\n",
+       "   symmetry_mean  \n",
+       "0         0.2419  \n",
+       "1         0.1812  \n",
+       "2         0.2069  \n",
+       "3         0.2597  \n",
+       "4         0.1809  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# repeat the step above using index numbers\n",
-    "df_means = df.iloc[:,:12]\n",
+    "df_means = df.iloc[:,:11]\n",
     "df_means.head()"
    ]
   },
@@ -2013,13 +2150,15 @@
     "collapsed": true
    },
    "source": [
-    "Let's save the dataframe of means for use in a future notebook."
+    "Let's save the dataframe of means for later."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_means.to_csv('cancer_data_means.csv', index=False)"
@@ -2039,30 +2178,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>diagnosis</th>\n",
+       "      <th>radius_SE</th>\n",
        "      <th>texture_SE</th>\n",
        "      <th>perimeter_SE</th>\n",
        "      <th>area_SE</th>\n",
@@ -2077,6 +2219,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>842302</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1.0950</td>\n",
        "      <td>NaN</td>\n",
        "      <td>8.589</td>\n",
        "      <td>153.40</td>\n",
@@ -2089,6 +2234,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>842517</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0.5435</td>\n",
        "      <td>0.7339</td>\n",
        "      <td>3.398</td>\n",
        "      <td>74.08</td>\n",
@@ -2101,6 +2249,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>84300903</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0.7456</td>\n",
        "      <td>0.7869</td>\n",
        "      <td>4.585</td>\n",
        "      <td>94.03</td>\n",
@@ -2113,6 +2264,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>84348301</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0.4956</td>\n",
        "      <td>1.1560</td>\n",
        "      <td>3.445</td>\n",
        "      <td>27.23</td>\n",
@@ -2125,6 +2279,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>84358402</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0.7572</td>\n",
        "      <td>0.7813</td>\n",
        "      <td>5.438</td>\n",
        "      <td>94.44</td>\n",
@@ -2140,41 +2297,52 @@
        "</div>"
       ],
       "text/plain": [
-       "   texture_SE  perimeter_SE  area_SE  smoothness_SE  compactness_SE  \\\n",
-       "0         NaN         8.589   153.40       0.006399         0.04904   \n",
-       "1      0.7339         3.398    74.08       0.005225         0.01308   \n",
-       "2      0.7869         4.585    94.03       0.006150         0.04006   \n",
-       "3      1.1560         3.445    27.23            NaN         0.07458   \n",
-       "4      0.7813         5.438    94.44       0.011490         0.02461   \n",
+       "         id diagnosis  radius_SE  texture_SE  perimeter_SE  area_SE  \\\n",
+       "0    842302         M     1.0950         NaN         8.589   153.40   \n",
+       "1    842517         M     0.5435      0.7339         3.398    74.08   \n",
+       "2  84300903         M     0.7456      0.7869         4.585    94.03   \n",
+       "3  84348301         M     0.4956      1.1560         3.445    27.23   \n",
+       "4  84358402         M     0.7572      0.7813         5.438    94.44   \n",
        "\n",
-       "   concavity_SE  concave_points_SE  symmetry_SE  fractal_dimension_SE  \n",
-       "0       0.05373            0.01587      0.03003              0.006193  \n",
-       "1       0.01860            0.01340      0.01389              0.003532  \n",
-       "2       0.03832            0.02058      0.02250              0.004571  \n",
-       "3       0.05661            0.01867      0.05963              0.009208  \n",
-       "4       0.05688            0.01885      0.01756              0.005115  "
+       "   smoothness_SE  compactness_SE  concavity_SE  concave_points_SE  \\\n",
+       "0       0.006399         0.04904       0.05373            0.01587   \n",
+       "1       0.005225         0.01308       0.01860            0.01340   \n",
+       "2       0.006150         0.04006       0.03832            0.02058   \n",
+       "3            NaN         0.07458       0.05661            0.01867   \n",
+       "4       0.011490         0.02461       0.05688            0.01885   \n",
+       "\n",
+       "   symmetry_SE  fractal_dimension_SE  \n",
+       "0      0.03003              0.006193  \n",
+       "1      0.01389              0.003532  \n",
+       "2      0.02250              0.004571  \n",
+       "3      0.05963              0.009208  \n",
+       "4      0.01756              0.005115  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# import\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv('cancer_data.csv')\n",
-    "df.head()\n",
-    "\n",
     "# create the standard errors dataframe\n",
-    "np.r_[13:22]\n",
-    "df_se = df.iloc[:, np.r_[13:22]]\n",
+    "df_SE = df.iloc[:, np.r_[:2, 12:22]]\n",
     "\n",
     "# view the first few rows to confirm this was successful\n",
-    "df_se.head()"
+    "df_SE.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2193,7 +2361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
